<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:screenOrientation="portrait">


    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/clipboard"
            app:srcCompat="@drawable/clipboard" />

        <LinearLayout
            android:id="@+id/inforow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fname"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/nameLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lname"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/singupbtn" />

            <TextView
                android:id="@+id/youarea"
                style="@android:style/Widget.DeviceDefault.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/youAreA"
                android:textSize="18sp"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/userType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


                <RadioButton
                    android:id="@+id/isPatient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/weight"
                    android:onClick="setUserType"
                    android:text="@string/patient"
                    tools:layout_editor_absoluteX="203dp"
                    tools:layout_editor_absoluteY="497dp" />

                <RadioButton
                    android:id="@+id/isClinicEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/weight"
                    android:onClick="setUserType"
                    android:text="@string/clinic" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/alreadyLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:longClickable="true"
                android:layout_gravity="center"
                android:text="@string/alreadySignedup" />
        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
